--- a/README
+++ b/README
@@ -1,16 +1,19 @@
-IIPImage - High Resolution Streaming Image Server
-=================================================
+-----------------------------------------------------------------------
+       IIPImage - High Resolution Streaming Imaging Server
+	Forked by Cytomine
+-----------------------------------------------------------------------
 
-[![GPLv3 Licensed](https://img.shields.io/badge/license-GPLv3-blue.svg)](https://www.gnu.org/copyleft/gpl.html)
-[![Build Status](https://travis-ci.org/ruven/iipsrv.svg)](https://travis-ci.org/ruven/iipsrv)
-[![Coverity Scan](https://img.shields.io/coverity/scan/3997.svg)](https://scan.coverity.com/projects/ruven-iipsrv)
 
 ABOUT
 -----
-IIPImage is an advanced high-performance feature-rich image server system for web-based streamed viewing and zooming of ultra high-resolution 
-images. It is designed to be fast and bandwidth-efficient with low processor and memory requirements. The system can comfortably handle gigapixel size images as 
+IIPImage is an advanced high-performance feature-rich image server system for web-based streamed viewing and zooming of ultra high-resolution
+images. It is designed to be fast and bandwidth-efficient with low processor and memory requirements. The system can comfortably handle gigapixel size images as
 well as advanced image features such as 8, 16 and 32 bits per channel, CIELAB colorimetric images and scientific imagery such as multispectral images, image sequences and 3D surface topologies.
 
+See https://github.com/ruven/iipsrv for the official version.
+
+This fork was made to add support for the OpenSlide librairy (http://openslide.org/).
+By this way, iipsrv support more image formats as ndpi, mrax, svs, etc.
 
 FEATURES
 --------
@@ -28,7 +31,7 @@ FEATURES
 * 3D panoramic views
 * Dynamic hillshading of 3D surface topologies
 * Dynamic decoder module capability
-
+* Openslide support
 
 
 DOCUMENTATION
@@ -56,7 +59,7 @@ See COPYING.FCGI for licensing information for these libraries.
 
 REQUIREMENTS
 ------------
-Requirements: libtiff, zlib and the IJG JPEG development libraries.
+Requirements: openslide, libtiff, zlib and the IJG JPEG development libraries.
 Optional: libmemcached (for Memcached) and Kakadu or OpenJPEG (for JPEG2000).
 
 Plus, of course, an fcgi-enabled web server. The server has been successfully
@@ -86,11 +89,11 @@ environment using autogen.sh:
 
     ./autogen.sh
 
+Then, execute the following commands :
+
 Otherwise for release versions, use configure directly:
-
-    ./configure
-    make
-
+- LDFLAGS="-L/usr/local/lib -lopenslide" CPPFLAGS="-I/usr/local/include/openslide" ./configure
+- make
 
 OPTIONAL LIBRARIES: MEMCACHED
 -----------------------------
@@ -118,13 +121,13 @@ following parameters to the ./configure command
 OPTIONAL LIBRARIES: OPENJPEG
 ----------------------------
 
-IIPImage is able to decode JPEG2000 images via the open source OpenJPEG 
-library (http://www.openjpeg.org/). This is currently experimental and is 
-much slower than Kakadu. It is disabled by default: use --enable-openjpeg 
-or provide the path to the source code 
+IIPImage is able to decode JPEG2000 images via the open source OpenJPEG
+library (http://www.openjpeg.org/). This is currently experimental and is
+much slower than Kakadu. It is disabled by default: use --enable-openjpeg
+or provide the path to the source code
 (--with-openjpeg=/path/to/openjpeg/distribution) to enable. If no path is
-given, the default system verson of OpenJPEG will be used if available. 
-If Kakadu support has been requested, however, OpenJPEG will be automatically 
+given, the default system verson of OpenJPEG will be used if available.
+If Kakadu support has been requested, however, OpenJPEG will be automatically
 disabled.
 
 
@@ -171,7 +174,7 @@ ALLOW_UPSCALING: Determines whether an image may be rendered at a size greater
 than that of the source image. A value of 0 will prevent upscaling.
 The default is 1 (upscaling is allowed).
 
-MAX_LAYERS: The maximum number of quality layers to decode for images that support 
+MAX_LAYERS: The maximum number of quality layers to decode for images that support
 progressive quality encoding, such as JPEG2000. Ignored for other file 
 formats. If not set, half of the available quality layers will be decoded by default.
 If set to -1, all the available layers will be decoded by default.
@@ -205,7 +208,7 @@ CORS: Cross Origin Resource Sharing setting. Disabled by default.
 Set to * to enable for all domains or specify a single domain.
 See http://www.w3.org/TR/cors/ for more details on CORS.
 
-BASE_URL: Set a base URL for use in certain protocol requests if web server rewriting 
+BASE_URL: Set a base URL for use in certain protocol requests if web server rewriting
 has taken place and the public URL is not the same as that supplied to iipsrv.
 
 URI_MAP: Set a mapping from a URL prefix to a supported protocol. This enables iipsrv to
@@ -214,7 +217,7 @@ be able to work without requring full CGI query strings. Map must be of the form
 be one of IIP,IIIF,DeepZoom, Zoomify. Used, for example, to map requests of the form
 http://server/iiif/ to the IIIF protocol handler without requiring web server rewriting.
 
-CACHE_CONTROL: Set the HTTP Cache-Control header. See http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.9 for 
+CACHE_CONTROL: Set the HTTP Cache-Control header. See http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.9 for
 a full list of options. If not set, header defaults to "max-age=86400" (24 hours).
 
 EMBED_ICC: Set whether the ICC profile is embedded within the output image.
@@ -224,7 +227,7 @@ OMP_NUM_THREADS: Set the number of OpenMP threads to be used by the iipsrv image
 processing routines (See OpenMP specification for details). All available processor
 threads are used by default.
 
-DECODER_MODULES: Comma separated list of external modules for decoding 
+DECODER_MODULES: Comma separated list of external modules for decoding
 other image formats. This is only necessary if you have activated 
 --enable-modules for ./configure and written your own image format 
 handler(s).
@@ -297,7 +300,7 @@ same way, but is configured differently. Load the module like this:
     LoadModule fcgid_module /path/to/apachemodules/mod_fcgid.so
 
 
-Here is an example configuration. Note that mod_fcgid does not have a 
+Here is an example configuration. Note that mod_fcgid does not have a
 FastCgiServer directive and there is no need to explicitly start the server:
 
 ```
@@ -369,10 +372,10 @@ fastcgi.server = ( "/fcgi-bin/iipsrv.fcgi" =>
 
 ### NginX
 
-iipsrv can also be used with NginX. The one drawback with regards to iipsrv is that it cannot automatically spawn FCGI processes, so you will need to use 
+iipsrv can also be used with NginX. The one drawback with regards to iipsrv is that it cannot automatically spawn FCGI processes, so you will need to use
 nginx together with spawn-fcgi or start iipsrv from the command line.
 
-To set up nginx with iipsrv add a directive such as this to your nginx configuration, which will forward requests to /fcgi-bin/iipsrv.fcgi to a 
+To set up nginx with iipsrv add a directive such as this to your nginx configuration, which will forward requests to /fcgi-bin/iipsrv.fcgi to a
 running iipsrv process on port 9000.
 
 ```
@@ -389,7 +392,7 @@ location /fcgi-bin/iipsrv.fcgi {
 }
 ```
 
-Nginx can also handle load balancing to multiple iipsrv instances, which can be hosted on the same machine on multiple ports or on different hosts. 
+Nginx can also handle load balancing to multiple iipsrv instances, which can be hosted on the same machine on multiple ports or on different hosts.
 For a multiple host configuration, declare the load balancing like this:
 
 ```
@@ -466,13 +469,13 @@ For example:
 where the argument given to bind is the socket on which to listen to FCGI
 requests. Note that these are *not* HTTP requests and iipsrv will still require a web server front-end.
 
-There is additionally a --backlog parameter that is optional and sets the socket backlog value. The backlog value specifies the number of requests can be queued and, 
+There is additionally a --backlog parameter that is optional and sets the socket backlog value. The backlog value specifies the number of requests can be queued and,
 therefore, increases the number of concurrent connections that iipsrv can handle and is set to 2048 by default. For example:
 
     iipsrv.fcgi --bind 192.168.0.1:9000 --backlog 1024
 
-Note that the backlog parameter must be specified after the bind parameter and argument.  Note also that this value may be limited by the operating system. On Linux kernels 
-< 2.4.25 and Mac OS X, the backlog limit is hard-coded to 128, so any value above this will be limited to 128 by the OS. If you do provide a backlog value, verify whether 
+Note that the backlog parameter must be specified after the bind parameter and argument.  Note also that this value may be limited by the operating system. On Linux kernels
+< 2.4.25 and Mac OS X, the backlog limit is hard-coded to 128, so any value above this will be limited to 128 by the OS. If you do provide a backlog value, verify whether
 the setting /proc/sys/net/core/somaxconn should be updated.
 
 Your web server should, therefore, be configured to use this address for FastCGI.
