--- a/README
+++ b/README
@@ -1,14 +1,15 @@
-IIPImage - High Resolution Streaming Image Server
-=================================================
+#IIPImage forked by Cytomine
 
+> IIPImage is an advanced high-performance feature-rich image server system for web-based streamed viewing and zooming of ultra high-resolution
+  images. 
+
+[![Build Status](https://travis-ci.com/Cytomine-ULiege/iipsrv.svg?branch=master)](https://travis-ci.com/Cytomine-ULiege/iipsrv)
+[![GitHub release](https://img.shields.io/github/release/Cytomine-ULiege/iipsrv.svg)](https://github.com/Cytomine-ULiege/iipsrv/releases)
 [![GPLv3 Licensed](https://img.shields.io/badge/license-GPLv3-blue.svg)](https://www.gnu.org/copyleft/gpl.html)
-[![Build Status](https://travis-ci.org/ruven/iipsrv.svg)](https://travis-ci.org/ruven/iipsrv)
-[![Coverity Scan](https://img.shields.io/coverity/scan/3997.svg)](https://scan.coverity.com/projects/ruven-iipsrv)
 
-ABOUT
------
-IIPImage is an advanced high-performance feature-rich image server system for web-based streamed viewing and zooming of ultra high-resolution
-images. It is designed to be fast and bandwidth-efficient with low processor and memory requirements. The system can comfortably handle gigapixel size images as
+## About
+
+IIPImage is designed to be fast and bandwidth-efficient with low processor and memory requirements. The system can comfortably handle gigapixel size images as
 well as advanced image features such as 8, 16 and 32 bits per channel, CIELAB colorimetric images and scientific imagery such as multispectral images, image sequences and 3D surface topologies.
 
 See https://github.com/ruven/iipsrv for the official version.
@@ -18,8 +19,8 @@ By this way, iipsrv natively supports more image formats as ndpi, mrax, svs, etc
 Also, we added a custom color mapping mechanism and the possibility to export regions
 of images in TIFF, with the initial bit depth.
 
-FEATURES
---------
+## Features
+
 * Fast lightweight embeddable FastCGI server module
 * High performance with inbuilt configurable cache
 * Support for gigapixel images
@@ -37,8 +38,7 @@ FEATURES
 * Openslide support
 * Custom color mapping
 
-DOCUMENTATION
--------------
+## Documentation
 Detailed class descriptions (generated using doxygen) are available in the
 doc subdirectory
 
@@ -81,8 +81,7 @@ Must be the last command.
 
 
 
-LICENCE
--------
+## License
 
 iipsrv is released under the GNU General Public License (GPL). See the copyright
 notice COPYING in this directory for licensing details or go to
@@ -97,8 +96,7 @@ See COPYING.FCGI for licensing information for these libraries.
 
 
 
-REQUIREMENTS
-------------
+## Requirements
 Requirements: openslide, libtiff, zlib and the IJG JPEG development libraries.
 Optional: libmemcached (for Memcached) and Kakadu or OpenJPEG (for JPEG2000).
 
@@ -115,8 +113,7 @@ Example server configurations are shown below.
 
 
 
-BUILDING
---------
+## Building
 The standard autoconf build process should work fine. If you want to allow
 dynamic loading of 3rd party image decoders, use the configure option
 --enable-modules. There is a version of the FCGI development library included
@@ -135,8 +132,7 @@ Otherwise for release versions, use configure directly:
     make
 
 
-OPTIONAL LIBRARIES: MEMCACHED
------------------------------
+### OPTIONAL LIBRARIES: MEMCACHED
 IIPImage is able to use Memcached (http://www.memcached.org), a high-performance,
 distributed memory object caching system. If enabled, IIPImage will cache
 results using Memcached, giving IIPImage added speed and scalability. To use
@@ -146,8 +142,7 @@ during the build process.
 
 
 
-OPTIONAL LIBRARIES: KAKADU
---------------------------
+### OPTIONAL LIBRARIES: KAKADU
 IIPImage is able to decode JPEG2000 images via the Kakadu SDK
 (http://www.kakadusoftware.com). This is, however, not open source and you will
 need to purchase a license for the source code. In order to use, first build
@@ -158,9 +153,7 @@ following parameters to the ./configure command
 
 
 
-OPTIONAL LIBRARIES: OPENJPEG
-----------------------------
-
+### OPTIONAL LIBRARIES: OPENJPEG
 IIPImage is able to decode JPEG2000 images via the open source OpenJPEG 
 library (http://www.openjpeg.org/). This is currently experimental and is 
 much slower than Kakadu. It is disabled by default: use --enable-openjpeg 
@@ -172,8 +165,7 @@ disabled.
 
 
 
-INSTALLATION
-------------
+## INSTALLATION
 Simply copy the executable called iipsrv.fcgi in the src subdirectory into
 the web server fcgi directory. If one does not exist, simply create one, called,
 for example, fcgi-bin. The web server will need to be configured to use this
@@ -181,8 +173,7 @@ executable.
 
 
 
-CONFIGURATION
--------------
+## CONFIGURATION
 There are several startup variables that can be passed to the server.
 They are all optional.
 
@@ -278,8 +269,7 @@ handler(s).
 
 
 
-IMAGE PATHS
------------
+## IMAGE PATHS
 The images paths given to the server via the FIF variable must be
 absolute paths on the server machine (eg. FIF=/images/test.tif) 
 and not paths relative to the web server document root location.
@@ -289,9 +279,7 @@ able to access and read the images!
 
 
 
-EXAMPLE SERVER CONFIGURATIONS
------------------------------
-
+## EXAMPLE SERVER CONFIGURATIONS
 ### Apache and mod_fastcgi
 
 httpd.conf example extract:
